# amazon-sentiment-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
reports/: classification_report.txt  eda_summary.txt  metrics.json  metrics.txt
scripts/: decompress_bz2.py  eda.py  predict.py  train.py
src/amazon_sentiment/: data.py  download_data.py  evaluate.py  model.py
src/amazon_sentiment_crispdm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
